--- a/src/app/components/receta-item/receta-item.component.html
+++ b/src/app/components/receta-item/receta-item.component.html
@@ -1,5 +1,5 @@
 <ion-card *ngIf="receta">
-  <img [src]="receta.imagen" [alt]="receta.nombre" />
+  <img [src]="receta.imagen" [alt]="receta.nombre" class="receta-imagen" />
 
   <ion-card-header>
     <ion-card-title>{{ receta.nombre }}</ion-card-title>
